@@ -19,6 +19,7 @@ The rules for this file:
  * 2.4.0
 
 Fixes
+  * hbond analysis: access hbonds results through new results member in count_by_ids() and count_by_type()
   * Added isolayer selection method (Issue #3845)
   * Auxiliary; determination of representative frames: Removed undefined
     behaviour for cutoff values < -1 (PR # 3749)
